# Pengine-2.0

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: c-cpp.yml
Editor/Source/: CMakeLists.txt
Editor/Source/Core/: Editor.cpp  Editor.h
Pengine/Source/: CMakeLists.txt
Pengine/Source/ComponentSystems/: AudioSystem.cpp  AudioSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  UISystem.cpp  UISystem.h
Pengine/Source/Components/: AudioListener.h  AudioSource.h  Canvas.h  Renderer3D.h  RigidBody.h  (+4 more)
SandBox/: T.scene  Test.scene  TestBindless.scene  imgui.ini
SandBox/Configs/: GraphicsSettingsHigh.gs  GraphicsSettingsLow.gs
SandBox/Game/: Game.scene  HomeBase.scene  Raid.scene
SandBox/Materials/: AntiAliasingAndCompose.basemat  Atmosphere.basemat  BloomDownSample.basemat  BloomUpSample.basemat  BlurReflections.basemat  CheckerBoard.basemat  CheckerBoard.mat  ComputeIndirectDrawCSM.basemat  ComputeIndirectDrawGBuffer.basemat  DDGIProbeBlend.basemat  DDGIProbeDebug.basemat  DDGIProbeOffset.basemat  DDGIProbeUpdate.basemat  DecalBase.basemat  DecalBase.mat  DefaultReflection.basemat  Deferred.basemat  DissolveBase.basemat  FoliageBase.basemat  FoliageBase.mat  GPUSkinning.basemat  HiZPyramid.basemat  Line.basemat  MeshBase.basemat  MeshBase.mat  MeshBaseDoubleSided.basemat  MeshBaseDoubleSided.mat  MeshBaseSkinned.basemat  MeshBaseSkinned.mat  MotionVectors.basemat  RayTracedReflection.basemat  RectangleUI.basemat  SSAO.basemat  SSAOBlur.basemat  SSR.basemat  SSRBlur.basemat  SSS.basemat  SSSBlur.basemat  ScaleTexture.basemat  SkyBox.basemat  (+2 more)
SandBox/Shaders/: BloomDownSample.comp  BloomDownSample.frag  BloomUpSample.comp  BlurReflections.comp  CSM.frag  CSM.geom  CSM.vert  CSMFoliage.vert  CSMSkinned.vert  CheckerBoard.frag  CheckerBoard.vert  ComputeIndirectDrawCSM.comp  ComputeIndirectDrawGBuffer.comp  DDGIProbeBlend.comp  DDGIProbeDebug.comp  DDGIProbeOffset.comp  DDGIProbeUpdate.comp  Decal.frag  Decal.vert  DefaultReflection.vert  Deferred.comp  Dissolve.frag  Dissolve.vert  Foliage.vert  FoliageTransparent.vert  GPUSkinning.comp  HiZReduce.comp  Line.vert  MotionVectors.comp  Opaque.frag  Opaque.vert  OpaqueSkinned.vert  PointLightShadows.vert  PointLightShadowsFoliage.vert  RayTracedReflection.comp  SSAO.comp  SSR.comp  SSS.comp  SkyBox.vert  SpotLightShadows.frag  (+11 more)
SandBox/Source/: CMakeLists.txt
SandBox/Source/Core/: main.cpp
SandBox/Source/FirstPersonExample/: CharacterSystem.cpp  FirstPersonCharacterSystem.cpp
SandBox/Source/Game/: ComponentRegistration.cpp  EnemyComponent.h  EnemySystem.cpp  EnemySystem.h  GameApplication.cpp  GameApplication.h  GameStateComponent.h  GameStateSystem.cpp  GameStateSystem.h  InteractableComponent.h  InteractableSystem.cpp  InteractableSystem.h  InventoryComponent.h  InventorySystem.cpp  InventorySystem.h  ItemComponent.h  LootContainerComponent.h  LootSystem.cpp  LootSystem.h  PatrolComponent.h  PatrolSystem.cpp  PatrolSystem.h  PickupComponent.h  PickupSystem.cpp  PickupSystem.h  PlayerComponent.h  PlayerSystem.cpp  PlayerSystem.h  ProceduralMapSystem.cpp  ProceduralMapSystem.h  ProjectileComponent.h  ProjectileSystem.cpp  ProjectileSystem.h  RoguelikeState.h  ShopComponent.h  ShopSystem.cpp  ShopSystem.h  WaveComponent.h  WaveSystem.cpp  WaveSystem.h  (+3 more)
SandBox/Sponza/: Sponza.scene
SandBox/Temp/: CheckerBoard.basemat  DecalBase.basemat  DecalBase.mat  DecalParallax.mat  EmissiveRed.mat  FoliageBase.basemat  PointLightShadowsFoliage.vert  PointLightShadowsSkinned.vert  TestParallax.mat
SandBox/TestScene/: Test.scene
Test/: AABB.cpp  CMakeLists.txt  Camera.cpp  Components.cpp  Entity.cpp  EntityAnimator.cpp  EventSystem.cpp  Scene.cpp  Transform.cpp  UUID.cpp  Utils.cpp  Visualizer.cpp
(+384 files in other folders)
